--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "prepare": "husky",
+    "lint:staged": "git diff --cached --name-only --diff-filter=ACM | grep '\\.\\(js\\|jsx\\|ts\\|tsx\\)$' | xargs eslint",
     "format:staged": "git diff --cached --name-only --diff-filter=ACM | grep '\\.\\(js\\|jsx\\|ts\\|tsx\\|css\\|scss\\|json\\)$' | xargs prettier --write ."
   },
   "dependencies": {
